--- a/frontend/views/cart.html
+++ b/frontend/views/cart.html
@@ -1,200 +1,21 @@
-<!-- Start Banner Area -->
-    <section class="banner-area organic-breadcrumb">
-        <div class="container">
-            <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-                <div class="col-first">
-                    <h1>Shopping Cart</h1>
-                    <nav class="d-flex align-items-center">
-                        <a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-                        <a href="category.html">Cart</a>
-                    </nav>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Banner Area -->
+<section class="banner-area organic-breadcrumb">
+  <div class="container">
+    <div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
+      <div class="col-first">
+        <h1>Shopping Cart</h1>
+        <nav class="d-flex align-items-center">
+          <a href="#home">Home<span class="lnr lnr-arrow-right"></span></a>
+          <a href="#cart">Cart</a>
+        </nav>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <!--================Cart Area =================-->
-    <section class="cart_area">
-        <div class="container">
-            <div class="cart_inner">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">Product</th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                                <td>
-                                   <div class="product_count">
-                                    <input type="text" name="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; input.value = val + 1;" 
-                                            class="increase items-count" type="button">
-                                            <i class="lnr lnr-chevron-up"></i>
-                                        </button>
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; if(val > 0) input.value = val - 1;" 
-                                            class="reduced items-count" type="button">
-                                            <i class="lnr lnr-chevron-down"></i>
-                                            </button>
-                                    </div>
-
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                                <td>
-                                    <div class="product_count">
-                                    <input type="text" name="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; input.value = val + 1;" 
-                                            class="increase items-count" type="button">
-                                            <i class="lnr lnr-chevron-up"></i>
-                                        </button>
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; if(val > 0) input.value = val - 1;" 
-                                            class="reduced items-count" type="button">
-                                            <i class="lnr lnr-chevron-down"></i>
-                                            </button>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                                <td>
-                                    <div class="product_count">
-                                    <input type="text" name="qty" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; input.value = val + 1;" 
-                                            class="increase items-count" type="button">
-                                            <i class="lnr lnr-chevron-up"></i>
-                                        </button>
-                                        <button onclick="var input = this.parentNode.querySelector('.qty'); var val = parseInt(input.value) || 0; if(val > 0) input.value = val - 1;" 
-                                            class="reduced items-count" type="button">
-                                            <i class="lnr lnr-chevron-down"></i>
-                                            </button>
-                                    </div>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                            </tr>
-                            <tr class="bottom_button">
-                                <td>
-                                    <a class="gray_btn" href="#">Update Cart</a>
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>     
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                    <h5>Subtotal</h5>
-                                </td>
-                                <td>
-                                    <h5>$0.00</h5>
-                                </td>
-                            </tr>
-                            <tr class="shipping_area">
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                    <h5>Shipping</h5>
-                                </td>
-                                <td>
-                                    <div class="shipping_box">
-                                        <ul class="list">
-                                            <li><a href="#">Flat Rate: $5.00</a></li>
-                                            <li><a href="#">Free Shipping</a></li>
-                                            <li><a href="#">Flat Rate: $10.00</a></li>
-                                            <li class="active"><a href="#">Local Delivery: $2.00</a></li>
-                                        </ul>
-                                        <h6>Calculate Shipping <i class="fa fa-caret-down" aria-hidden="true"></i></h6>
-                                        <select class="shipping_select">
-                                            <option value="1">Bangladesh</option>
-                                            <option value="2">India</option>
-                                            <option value="4">Pakistan</option>
-                                        </select>
-                                        <select class="shipping_select">
-                                            <option value="1">Select a State</option>
-                                            <option value="2">Select a State</option>
-                                            <option value="4">Select a State</option>
-                                        </select>
-                                        <input type="text" placeholder="Postcode/Zipcode">
-                                        <a class="gray_btn" href="#">Update Details</a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr class="out_button_area">
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-
-                                </td>
-                                <td>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--================End Cart Area =================-->
-    
-    <script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-    <script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
-
-</html>
+<section class="section_gap">
+  <div class="container">
+    <div id="cart-dynamic">
+      <p>Loading cart...</p>
+    </div>
+  </div>
+</section>
