--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -1,74 +1,77 @@
-<!-- Start Banner Area -->
-	<section class="banner-area organic-breadcrumb">
-		<div class="container">
-			<div class="breadcrumb-banner d-flex flex-wrap align-items-center justify-content-end">
-				<div class="col-first">
-					<h1>Login/Register</h1>
-					<nav class="d-flex align-items-center">
-						<a href="index.html">Home<span class="lnr lnr-arrow-right"></span></a>
-						<a href="category.html">Login/Register</a>
-					</nav>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Banner Area -->
+<section class="login_box_area section_gap">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div class="login_box_inner" style="border:1px solid rgba(0,0,0,.08); border-radius:12px;">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="login_box_img">
+                <img class="img-fluid" src="img/cart.jpg" alt="">
+                <div class="hover">
+                  <h4>Eleven & Co.</h4>
+                  <p>Login to access products, cart, and checkout. Admins see the admin panel.</p>
+                </div>
+              </div>
+            </div>
 
-	<!--================Login Box Area =================-->
-	<section class="login_box_area section_gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="login_box_img">
-						<img class="img-fluid" src="img/login.jpg" alt="">
-						<div class="hover">
-							<h4>New to our website?</h4>
-							<p>There are advances being made in science and technology everyday, and a good example of this is the</p>
-							<a class="primary-btn" href="registration.html">Create an Account</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="login_form_inner">
-						<h3>Log in to enter</h3>
-						<form class="row login_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
-							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="name" name="name" placeholder="Username" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Username'">
-							</div>
-							<div class="col-md-12 form-group">
-								<input type="text" class="form-control" id="name" name="name" placeholder="Password" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Password'">
-							</div>
-							<div class="col-md-12 form-group">
-								<div class="creat_account">
-									<input type="checkbox" id="f-option2" name="selector">
-									<label for="f-option2">Keep me logged in</label>
-								</div>
-							</div>
-							<div class="col-md-12 form-group">
-								<button type="submit" value="submit" class="primary-btn">Log In</button>
-								<a href="#">Forgot Password?</a>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================End Login Box Area =================-->
-	<script src="js/vendor/jquery-2.2.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-	 crossorigin="anonymous"></script>
-	<script src="js/vendor/bootstrap.min.js"></script>
-	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/jquery.sticky.js"></script>
-	<script src="js/nouislider.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<!--gmaps Js-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
-	<script src="js/gmaps.min.js"></script>
-	<script src="js/main.js"></script>
-</body>
+            <div class="col-lg-6">
+              <div class="login_form_inner p-4">
+                <h3>Account</h3>
 
-</html>
+                <ul class="nav nav-tabs mb-3" role="tablist">
+                  <li class="nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#tab-login" role="tab">Login</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#tab-register" role="tab">Register</a>
+                  </li>
+                </ul>
+
+                <div class="tab-content">
+                  <div class="tab-pane fade show active" id="tab-login" role="tabpanel">
+                    <form id="login-form" class="row login_form" action="#" method="post">
+                      <div class="col-md-12 form-group">
+                        <input id="login-email" type="email" class="form-control" placeholder="Email" required>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <input id="login-password" type="password" class="form-control" placeholder="Password" required>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <button id="btn-login" type="submit" class="primary-btn">Log In</button>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <small class="text-muted">Backend API base URL can be set in Dashboard after login.</small>
+                      </div>
+                    </form>
+                  </div>
+
+                  <div class="tab-pane fade" id="tab-register" role="tabpanel">
+                    <form id="register-form" class="row login_form" action="#" method="post">
+                      <div class="col-md-12 form-group">
+                        <input id="reg-email" type="email" class="form-control" placeholder="Email" required>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <input id="reg-password" type="password" class="form-control" placeholder="Password (min 6 chars)" required>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <input id="reg-confirm" type="password" class="form-control" placeholder="Confirm password" required>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <button id="btn-register" type="submit" class="primary-btn">Create Account</button>
+                      </div>
+                      <div class="col-md-12 form-group">
+                        <small class="text-muted">Admin role is assigned by backend config (ADMIN_EMAILS).</small>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
